plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.java.dev.jna:jna:5.13.0'
    implementation group: 'com.alphacephei', name: 'vosk', version: '0.3.45'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
    implementation("com.google.guava:guava:32.0.1-jre")
    implementation "org.bytedeco:javacv-platform:1.5.8"
    implementation "org.bytedeco:ffmpeg-platform:4.4-1.5.8"
    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'ch.qos.logback:logback-classic:1.5.6'  // реализация SLF4J
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
}

application {
    mainClass = 'logic.vosk.MicroRecogniseDemo'
//    mainClass = 'logic.persistence.InitDatabase'
    applicationDefaultJvmArgs = [
            '-Xms5G',
            '-Xmx5G',
            "--add-modules=javafx.controls,javafx.fxml,javafx.graphics",
            "-Dprism.verbose=true"
    ]
}

tasks.withType(JavaExec) {
    jvmArgs = [
            "--module-path", classpath.asPath,
            "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
    ]
}
configurations.all {
    resolutionStrategy {
        force 'net.java.dev.jna:jna:5.13.0'
    }
}